<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eccc68"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/user_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="#2f3542"
        android:fontFamily="sans-serif-black"
        android:text="@string/user_login"
        android:textColor="#EAE5E5"
        android:textColorHint="#272626"
        app:layout_constraintBottom_toTopOf="@+id/admin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="245dp"
        android:backgroundTint="#2f3542"
        android:fontFamily="sans-serif-black"
        android:text="@string/admin_login"
        android:textColor="#E8DDDD"
        android:textColorHint="#E3DBDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="67dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/jobfair"
        android:textColor="#090808"
        android:textSize="49sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>